@@ -158,6 +158,20 @@ function setup_logging {
 	fi
 }
 
+# Usage: log_echo <message>
+# Append <message> to log & stdout.
+function log_echo {
+	eval "echo \"\$@\" $log_target && pipestat"
+	[[ "$terminal_output" == no ]] && echo "$@"
+}
+
+# Usage: log_warning <message>
+# Append <message> to log & stderr.
+function log_warning {
+	eval "warning \"\$@\" $log_target && pipestat"
+	[[ "$terminal_output" == no ]] && warning "$@"
+}
+
 # Usage: logged_failure <command>
 # Called by log when a logged command fails.  If terminal output has been
 # disabled, output the log file's tail.  Preserve return value of the logged
@@ -191,20 +205,6 @@ function log {
 	[[ -z "$*" ]] && usage_error "log" "<command>"
 	eval "( set -ex; \"\$@\" ) $log_target && pipestat" ||
 	logged_failure "$@"
-}
-
-# Usage: log_echo <message>
-# Append <message> to log & stdout.
-function log_echo {
-	eval "echo \"\$@\" $log_target && pipestat"
-	[[ "$terminal_output" == no ]] && echo "$@"
-}
-
-# Usage: log_warning <message>
-# Append <message> to log & stderr.
-function log_warning {
-	eval "warning \"\$@\" $log_target && pipestat"
-	[[ "$terminal_output" == no ]] && warning "$@"
 }
 
 # ---------------------------- VERSION REPORTING ----------------------------- #
