@@ -1,0 +1,18 @@
+# Test stdout of `log_echo' when $terminal_output=yes & $logfile=output.log.
+
+_testing="libprometheus/log_echo"
+_description="stdout, terminal + file"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+	source "output.bash" || exit 1
+
+	terminal_output=yes
+	logfile="output.log"
+	> "$logfile"
+	setup_logging
+
+	local out="$(log_echo "five     spaces")"
+	[[ "$out" == "runtest: five     spaces" ]]
+}
